# p2p

./: .gitignore  Makefile  README.md
frontend/: .env  package-lock.json  package.json
frontend/src/: style.css
frontend/src/composables/: useFileShare.ts  useSignaling.ts  useWebRTC.ts
frontend/src/router/: index.ts
frontend/src/views/: FileExplorerView.vue  FileShareView.vue  HomeView.vue  RoomEntryView.vue  VideoCallView.vue
worker/: Cargo.toml  wrangler.toml
worker/.wrangler/cache/: cf.json  wrangler-account.json
worker/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/.wrangler/state/v3/do/p2p-worker-SignalingRoom/: metadata.sqlite-shm  metadata.sqlite-wal
worker/src/: lib.rs
