[package]
name = "p2p-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[dependencies]
worker = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }
